# battlesnake-2020

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  test-move.js
src/: analytics.rs  main.rs  routes.rs  simulator.rs
src/game/: dir.rs  mod.rs  point.rs  snake.rs
src/profile/: aggressive.rs  alpha_beta.rs  astarbasic.rs  cautious.rs  follow.rs  mcts.rs  mod.rs  notsuck.rs  sim.rs  straight.rs
src/profile/mcts/: game_tree.rs  mod.rs
