[package]
name = "battlesnake-2020"
version = "0.1.0"
authors = ["Jayden Chan <jaydencn7@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
hashbrown = "0.1.8"
env_logger = "0.6.0"
log = "0.4.6"
pathfinding = "1.1.12"
rayon = "1.0.3"
tiny_http = "0.6.2"
